fix layout shift

--- a/client/static/css/map.css
+++ b/client/static/css/map.css
@@ -64,6 +64,7 @@ body,
 
 #search-bar {
   display: none;
+  position: absolute;
 }
 
 #search-bar button {
